--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
 
         </activity>
         <activity android:name=".activities.AsyncTaskActivity">
+
+        </activity>
+        <activity android:name=".activities.TimerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
